# breast-cancer-diagnostic-audit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  results.csv
.github/workflows/: tests.yml
bca/: __init__.py  data.py  explain.py  metrics.py  models.py  validation.py
models/: X_test.csv  logistic_regression.joblib  mlp.joblib  random_forest.joblib  shap_background.csv  thresholds.json  y_test.csv
notebooks/: exploration.ipynb
tests/: conftest.py  test_data.py  test_explain.py  test_metrics.py  test_validation_leakage.py
